--- a/5 Ejercicio HTML Boiler Plate Portafolio/index.html
+++ b/5 Ejercicio HTML Boiler Plate Portafolio/index.html
@@ -1,15 +1,31 @@
-<!-- TODO 1: Crear la estructura básica de HTML -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Site</title>
+  </head>
+  <body>
+    <h1>Portafolio de Michael Recalde</h1>
+    <h2>Soy un Desarrollador Web</h2>
+    <hr></hr>
+    <h3><a href="./public/movie-ranking.html">Proyecto de Clasificación de Películas</a></h3>
+    <img
+        src="./assets/images/movie-ranking.png"
+        alt="Captura de Pantalla"
+        width="400"
+        height="300"
+    />
 
-<!-- TODO 2: Añadir el HTML de tus proyectos anteriores en la carpeta public -->
+    <h3><a href="./public/birthday-invite.html">Proyecto de Invitacion de Cumpleaños</a></h3>
+    <img
+        src="./assets/images/birthday-invite.png"
+        alt="Captura de Pantalla"
+        width="400"
+        height="300"
+    />
 
-<!-- TODO 3: Tomar capturas de pantalla de las vistas previas de tus proyectos y añadir las imágenes a la carpeta images -->
+    <h4><a href="./public/about.html">Sobre Mí</a> <a href="./public/contact.html"> Contáctame</a></h4>
 
-<!-- TODO 4: Añadir títulos/subtítulos, etc. -->
-
-<!-- TODO 5: Añadir un enlace a las páginas de los proyectos -->
-
-<!-- TODO 6: Añadir imágenes para mostrar las vistas previas de los proyectos
-PISTA para TODO 6: Puedes usar el atributo height configurado a 200 para hacer la imagen más pequeña:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Añadir los enlaces a las páginas de Contacto y Sobre Mí -->
+  </body>
+</html>
