--- a/6 Ejercicio CSS/index.html
+++ b/6 Ejercicio CSS/index.html
@@ -4,11 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Agregando CSS</title>
+  <style>
+    body {
+      background-color: rgb(240, 98, 37);
+    }
+    h1 {
+      color: rgba(8, 11, 12, 0.899);
+      text-align: center;
+    }
+  
+  </style>
 </head>
 
 <body>
+  
   <h1>Tres Métodos de Agregar CSS</h1>
-  <!-- Crear 3 Enlaces a Las 3 Páginas Web: en línea, interna y externa -->
+  <h1><a href="./external.html">External</a></h1>
+  <h1><a href="./internal.html">Internal</a></h1>
+  <h1><a href="./inline.html">Inline</a></h1>
+  
 </body>
 
 </html>
