--- a/6 Ejercicio CSS/inline.html
+++ b/6 Ejercicio CSS/inline.html
@@ -8,6 +8,16 @@
 
 <body>
 <h1>¡Estílame en azul!</h1>
+<style>
+  body {
+    background-color: blue;
+  }
+  h1 {
+    color: rgb(95, 26, 225);
+    text-align: center;
+  }
+  
+</style>
 </body>
 
 </html>
