--- a/6 Ejercicio CSS/internal.html
+++ b/6 Ejercicio CSS/internal.html
@@ -8,6 +8,16 @@
 
 <body>
 <h1>¡Estílame en rojo!</h1>
+<style>
+  body {
+    background-color: red;
+  }
+  h1 {
+    color:rgb(182, 7, 7);
+    text-align: center;
+  }
+
+</style>
 </body>
 
 </html>
