--- a/6 Ejercicio CSS/external.html
+++ b/6 Ejercicio CSS/external.html
@@ -6,5 +6,16 @@
 </head>
 <body>
   <h1>Estílame en verde</h1>
+  <style>
+  body {
+    background-color: green;
+  }
+  h1 {
+    color: rgb(64, 188, 15);
+    text-align: center;
+  }
+  
+</style>
 </body>
+
 </html>
