--- a/11 Ejercicio css grid/index.html
+++ b/11 Ejercicio css grid/index.html
@@ -5,6 +5,34 @@
   <title>Chessboard</title>
   <style>
     /* Write your code here */
+    html{
+      padding: 0;
+      margin: 0;
+    }
+    .container{
+      display:grid;
+      grid-template-columns:  1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      gap: 0;
+    }
+
+    .container div{
+    height: 100px;
+    width: 100px;
+  
+    
+    }
+
+    .white {
+      background-color: #f0d9b5;
+    }
+
+    .black {
+      background-color: #b58863;
+    }
+
+
+
     /* Each square should be 100px by 100px */
     /* My colours for white: #f0d9b5, black: #b58863 */
   </style>
