--- a/11 Práctica CSS Grid/index.html
+++ b/11 Práctica CSS Grid/index.html
@@ -14,6 +14,7 @@
       <div class="four">Four</div>
       <div class="five">Five</div>
       <div class="six">Six</div>
+      <div class="seven">Seven</div>
     </div>
   </body>
 </html>
