--- a/13 Ejercicio CSS Grid Placement/exercise2.html
+++ b/13 Ejercicio CSS Grid Placement/exercise2.html
@@ -30,9 +30,14 @@
 
     }
 
+  
     .cowboy {
       background-color: #00B9FF;
-      grid-column: span 2;
+      grid-column-start: 1;
+      grid-column-end: 3;
+      grid-row: span 2;
+      grid-row-start: 1;
+      grid-row-end: 3;
     }
 
     .astronaut {
@@ -40,6 +45,7 @@
       order: 1;
 
       /* TODO: Make the astronaut box look like the goal2 image. */
+      grid-column: span 2;
 
     }
   </style>
